# mozcdic_ut_rs

./: Cargo.toml  README.md  README.original.md
.github/workflows/: build-action.yml
data/jinmei-ut/: jinmei-ut.txt
data/pkgbuild/: fcitx-mozc-ut-20210925.PKGBUILD  fcitx5-mozc-20210925.PKGBUILD  fcitx5-mozc-ut-20210925.PKGBUILD
src/: alt_cannadic.rs  chimei.rs  costs.rs  document.rs  edict2.rs  filter.rs  jawiki_article.rs  jawiki_titles.rs  jinmei_ut.rs  main.rs  make-dictionaries.sh  mozc.rs  neologd.rs  skkdic.rs  sudachidict.rs  util.rs
